--- a/TableTest/View/Base.lproj/Main.storyboard
+++ b/TableTest/View/Base.lproj/Main.storyboard
@@ -46,14 +46,109 @@
                     <connections>
                         <outlet property="progressView" destination="FBx-4g-dcM" id="hCe-Aw-wwo"/>
                         <outlet property="tableview" destination="xo3-I3-kKo" id="8g6-g9-ghG"/>
+                        <segue destination="Cfp-gb-dsF" kind="presentation" identifier="list_details" modalPresentationStyle="fullScreen" id="UAt-4Q-qIs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="18.840579710144929" y="93.75"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="dZj-xm-UOU">
+            <objects>
+                <navigationController id="Cfp-gb-dsF" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="5Hj-ZX-d2d"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="HVe-QF-Dhk">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="38m-e6-dbB" kind="relationship" relationship="rootViewController" id="gvv-r6-zdf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HCw-Cg-54A" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="912" y="94"/>
+        </scene>
+        <!--Details View Controller-->
+        <scene sceneID="TK6-qp-CiF">
+            <objects>
+                <viewController id="38m-e6-dbB" customClass="DetailsViewController" customModule="TableTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wKU-Nl-v5b">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z7y-VX-mHj">
+                                <rect key="frame" x="20" y="359" width="374" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="evU-K3-dVp">
+                                <rect key="frame" x="87" y="168" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="X4Y-yj-fp6"/>
+                                    <constraint firstAttribute="width" constant="240" id="pvd-jF-VlU"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NeY-ge-g9P">
+                                <rect key="frame" x="177" y="782" width="60.5" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="bmG-Yi-EuS"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Close">
+                                    <backgroundConfiguration key="background">
+                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </backgroundConfiguration>
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="close:" destination="38m-e6-dbB" eventType="touchUpInside" id="77b-IT-VlC"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="q9o-ew-iLU"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="NeY-ge-g9P" firstAttribute="centerX" secondItem="q9o-ew-iLU" secondAttribute="centerX" id="65U-XU-R4M"/>
+                            <constraint firstItem="q9o-ew-iLU" firstAttribute="trailing" secondItem="z7y-VX-mHj" secondAttribute="trailing" constant="20" id="Ac5-kX-ORM"/>
+                            <constraint firstItem="evU-K3-dVp" firstAttribute="centerX" secondItem="q9o-ew-iLU" secondAttribute="centerX" id="IEU-40-5ZI"/>
+                            <constraint firstItem="evU-K3-dVp" firstAttribute="top" secondItem="q9o-ew-iLU" secondAttribute="top" constant="80" id="UFk-nZ-uku"/>
+                            <constraint firstItem="z7y-VX-mHj" firstAttribute="top" secondItem="evU-K3-dVp" secondAttribute="bottom" constant="63" id="gt7-s5-qnZ"/>
+                            <constraint firstItem="q9o-ew-iLU" firstAttribute="bottom" secondItem="NeY-ge-g9P" secondAttribute="bottom" id="p2R-oz-Uwx"/>
+                            <constraint firstItem="z7y-VX-mHj" firstAttribute="leading" secondItem="q9o-ew-iLU" secondAttribute="leading" constant="20" id="qpg-Rw-OBt"/>
+                        </constraints>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="1bQ-Ya-IYr">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="eof-2H-qO3">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="lNF-gX-Wz2">
+                                <rect key="frame" x="20" y="5" width="92" height="34.5"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <inset key="imageEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="arrow.backward" catalog="system" title=" Back"/>
+                                <connections>
+                                    <action selector="back:" destination="38m-e6-dbB" eventType="touchUpInside" id="QY7-F5-8Eu"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="close" destination="NeY-ge-g9P" id="sLZ-SF-0Yz"/>
+                        <outlet property="detailLbl" destination="z7y-VX-mHj" id="f91-FP-yAg"/>
+                        <outlet property="imageView" destination="evU-K3-dVp" id="2GO-kH-lzm"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WUV-Hs-Pag" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1813.0434782608697" y="93.75"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="arrow.backward" catalog="system" width="128" height="98"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
